<resources>

    <string name="app_name">VoltStudy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="email_unverified">Email verification not done.Check your email.</string>
    <string name="email_sent">Verification email is sent.Check your email.</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="hint_email">Email</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a user? Sign-up now!</string>
    <string name="btn_link_to_login">Already Member! Login</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_tests">Tests</string>
    <string name="Sign_in_login">Sign In</string>
    <string name="remember_me">Remember Me</string>

    <!-- Special symbol -->
    <string name="bullet">•</string>

    <!-- General -->

    <!-- Course Names -->

    <!-- Course Author Names -->

    <!-- Course Difficulty -->

    <!-- Fullscreen Video Activity -->

    <!-- Firebase Database -->
    <string name="dbnode_courses">courses</string>
    <string name="dbnode_videos">videos</string>
    <string name="languages">Languages</string>
    <string name="db_node_course_lang">languages</string>

    <string name="dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="enter_course_title">Enter course title</string>

    <string name="video_instr">* Upload compressed/smaller data size videos for faster upload time. \n * Minimum required video quality is 480p.</string>

    <string name="text_que1">What does VoltStudy Means?</string>
    <string name="text_que2">Are the courses with certification ?</string>
    <string name="text_que3">When can I join this training program?</string>
    <string name="text_que4">How can I upload my courses?</string>
    <string name="text_que5">Where can i use this Certificate?</string>


    <string-array name="string_array_que1">
        <item>VoltStudy, is a trusted name in Electrical Projects execution field. We are Specialized in ELECTRICAL &amp; MECHANICAL ENGINEERING WORKS, TRAINING PROGRAM &amp; CONSULTANTS.</item>
    </string-array>

    <string-array name="string_array_que2">
        <item>Yes, VoltStudy gives you a Training Certificate after completion of an assessment provided by us.</item>
    </string-array>

    <string-array name="string_array_que3">
        <item> Anytime</item>
    </string-array>

    <string-array name="string_array_que4">
        <item>You have to register as VoltStudy Trainer to upload your courses. Then the courses will be verified by our team and be available for purchase.</item>
    </string-array>

    <string-array name="string_array_que5">
        <item>College Students can use this certificate as a Training Certificate &amp; can be used for final year project/Training as well.Whereas Professionals can use this certificate in your recruitment Process as this may define your experience proof.</item>
    </string-array>

</resources>
