<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorPrimary">

<RelativeLayout
    android:layout_width="match_parent"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/Sign_in_login"
        android:textColor="@color/white"
        android:textSize="25sp">

    </androidx.appcompat.widget.AppCompatTextView>


    <View
        android:id="@+id/View1"
        android:layout_width="80dp"
        android:layout_height="7dp"
        android:layout_below="@+id/textview1"
        android:layout_alignStart="@id/textview1"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:elevation="10dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/card2"
        android:visibility="visible"
        android:layout_marginTop="18dp"
        android:layout_below="@id/View1"
        android:padding="20dp"
        app:cardUseCompatPadding="true"
        app:cardElevation="7dp"
        android:background="@drawable/circular_card"
        app:cardCornerRadius="7dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:paddingHorizontal="16dp">

                <EditText android:id="@+id/login_input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="Email" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password Label -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:paddingHorizontal="16dp">

                <EditText android:id="@+id/login_input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="Password"/>

            </com.google.android.material.textfield.TextInputLayout>



            <androidx.appcompat.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/login_radio1"
                android:text="@string/remember_me"
                android:layout_marginStart="20dp"
                android:textStyle="normal"
                android:textSize="15sp"
                android:textColor="#000000">

            </androidx.appcompat.widget.AppCompatCheckBox>


            <Button
                android:id="@+id/login_btn_reset_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="16dp"
                android:background="@null"
                android:text="@string/btn_forgot_password"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="24dp"
                android:elevation="2dp"
                android:gravity="center"
                android:text="@string/btn_login"
                android:textColor="#ffff"
                android:background="@color/colorPrimary"
                 />


            <Button
                android:id="@+id/login_btn_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="18dp"
                android:background="@color/colorAccent"
                android:text="@string/btn_link_to_register"
                android:textAllCaps="false"
                android:textColor="@color/white" />



        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/login_loader"
            style="@style/AVLoadingIndicatorView.Large"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center|top"
            android:elevation="10dp"
            android:visibility="gone"
            app:indicatorColor="@color/colorPrimaryLight"
            app:indicatorName="BallScaleMultipleIndicator" />

    </androidx.cardview.widget.CardView>

    <Button
        android:layout_below="@id/card2"
        android:id="@+id/btn_skip_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:background="@null"
        android:text="Skip For Now >"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        />

</RelativeLayout>
</ScrollView>